<resources>
    <string name="app_name">HealthTree</string>
    <string name="language"> 2 </string>
    <string name="serial_number">Serial number</string>
    <string name="user_login_account_hint"> Email Address</string>
    <string name="user_login_password_hint"> Password </string>
    <string name="user_login_confirm_password_hint"> Confirm Password </string>
    <string name="user_login_btn_login"> Login </string>
    <string name="user_login_btn_register"> Register </string>
    <string name="user_login_tv_tx1"> Forgot password?</string>
    <string name="spo2">SpO2</string>
    <string name="percent_unit">%</string>
    <string name="two_null">--</string>
    <string name="PI_null">-.-</string>
    <string name="PI_display">PI&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%</string>
    <string name="resp_display">Resp&#160;&#160;&#160;&#160;&#160;&#160;rpm</string>
    <string name="device_name">HealthTree</string>
    <string name="scaning_device">Scanning device...</string>
    <string name="authority_device">No authority Bluetooth connection</string>
    <string name="pleth">Pleth</string>
    <string name="pr">PR</string>
    <string name="bpm">bpm</string>
    <string name="pr_null">---</string>
    <string name="heart">❤</string>
    <string name="device_info">Device details</string>
    <string name="device_name_detail">Device Name</string>
    <string name="type">Type</string>
    <string name="main_version">Firmware Version</string>
    <string name="sub_version">Sub-firmware Version</string>
    <string name="history">History</string>
    <string name="history_title">History Data</string>
    <!--<string name="history_tody">Today</string>-->
    <string name="history_tody">Export</string>
    <string name="export">Export</string>
    <string name="settings">Settings</string>
    <string name="sleep">Sleep</string>
    <string name="app_version">Version</string>
    <string name="version_display">V1.0</string>
    <string name="choose_device">Select device</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="time">Time</string>
    <string name="spo2_with_unit">SpO2(%)</string>
    <string name="hr_with_unit">PR(bpm)</string>
    <string name="brand">Brand</string>
    <string name="brand_weikang">wearcare</string>
    <string name="about">About</string>
    <string name="device_connected">Device connected</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="bluetooth_off">Bluetooth is off</string>
    <string name="connecting_device">Trying to connect device...</string>
    <string name="checknet_login"> Must be connected to the network to log </string>
    <string name="title_back"> Back </string>
    <string name="mail_format_is_incorrect"> Mail format is incorrect</string>
    <string name="user_password_tip3">The entered two passwords are inconsistent </string>
    <string name="user_error_password_input_char_error">The entered password contains special characters, please reset it.</string>
    <string name="user_error_password_combination_error">The password must be a combination of characters and numbers between 6 - 30 digits</string>
    <string name="user_login_password_error_tips">The entered password contains special characters, please reset it.</string>
    <string name="activity_user_register_success">Send successfully</string>
    <string name="check_forget_email"> Send successfully </string>
    <string name="check_forget_email_fail"> Send failed </string>
    <string name="user_login_suceed"> Login successful </string>
    <string name="user_login_failure"> Login failed </string>
    <string name="check_email"> Email has been sent,Please see the email to activate account</string>
    <string name="check_email_verified"> is not verified </string>
    <string name="check_email_detail"> (If the mail APP did not receive the mail, can go to the browser login email) </string>
    <string name="pull_to_refresh_tap_label"> Click refresh... </string>
    <string name="dialog_title_delete"> Are you sure to delete it? </string>
    <string name="more_user_management_add_user_sd"> No sd card </string>
    <string name="first_list_agestr"> years old </string>
    <string name="more_user_management_add_user_gender_female"> Female </string>
    <string name="more_user_management_add_user_gender_male"> Male</string>
    <string name="more_setting_height_cm"> cm </string>
    <string name="more_setting_height_inch"> inch </string>
    <string name="system_setting_unit_mmol"> mmol/L </string>
    <string name="system_setting_unit_mg"> mg/dL </string>
    <string name="more_hint"> Please select </string>
    <string name="shear_figure_fail"> Shear Figure failed</string>
    <string name="eliminate">Clear</string>
    <string name="pull_to_refresh_laster"> Latest updating: </string>
    <string name="pull_down_refresh"> You can refresh by dropping down </string>
    <string name="release_to_refresh"> Refreshed instantly when loosening </string>
    <string name="pull_refreshing"> Data refreshing... </string>
    <string name="login_pwd"> old password </string>
    <string name="new_pwd"> New Password </string>
    <string name="confirm_pwd"> Confirm the new password </string>
    <!-- 用户分享 -->
    <string name="data_share" >Sharing</string>
    <string name="last_week" >Last week</string>
    <string name="last_threeweek" >Last three weeks</string>
    <string name="last_month" >Last month</string>
    <string name="last_year" >Last year</string>
    <string name="start_date" >Start date</string>
    <string name="end_date" >End date</string>

    <string name="o_k" >Confirm</string>
    <string name="please_choose_the_date">please choose the date</string>
    <string name="custom_date">Custom date</string>
    <string name="blood_pressure_trend">blood pressure trend</string>
    <string name="blood_pressure_statistics">blood pressure statistics</string>

    <string name="guide_get_started">Get Started</string>
    <string name="remind_toolbar_txt">System Setting</string>
    <string name="remind_sp_tip_txt">SP02</string>
    <string name="remind_sp_h_txt">Sp02 Hight</string>
    <string name="remind_sp_l_txt">Sp02 Low</string>
    <string name="remind_pr_tip_txt">PR</string>
    <string name="remind_pr_h_txt">Pulse Rate Hight</string>
    <string name="remind_pr_l_txt">Pulse Rate Low</string>
    <string name="remind_pi_tip_txt">PI</string>
    <string name="remind_pi_h_txt">PI Hight</string>
    <string name="remind_pi_l_txt">PI Low</string>
    <string name="bluetooth_permission_tip">We need location permission to use your phone\'s Bluetooth.Shall we set it?</string>
    <string name="export_fail">Export fail.</string>
    <string name="spo2_pulse_rate_report_title"><![CDATA[Spo2 & Pulse Rate Report]]></string>
    <string name="bluetooth_init_fail_tip">Bluetooth initialization failed. Try restarting the application.</string>
    <string name="ble_service_running">Running</string>
    <string name="press_again_exit_app_tip">Press again to exit the application.</string>

</resources>
