<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backgroundDark"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/action_bar">

        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/device_info"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"/>


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="10dp"
            android:background="#00ffffff"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/back_button"/>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/backgroundLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="@string/device_name_detail"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/info_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:text="@string/device_name"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/backgroundLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="@string/brand"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:text="@string/brand_weikang"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/backgroundLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="@string/type"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/info_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/backgroundLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="@string/serial_number"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/info_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/backgroundLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="@string/main_version"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/info_main_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/backgroundLight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:text="@string/sub_version"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/info_sub_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="20dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </FrameLayout>

</LinearLayout>