<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:orientation="vertical" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp">
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical">
        <EditText
            android:id="@+id/login_pwd"
            style="@style/more_set_pwd"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/textWhite"/>

        <EditText
            android:id="@+id/new_pwd"
            style="@style/more_set_pwd"
            android:hint="@string/new_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/textWhite"/>

        <EditText
            android:id="@+id/confirm_pwd"
            style="@style/more_set_pwd"
            android:hint="@string/confirm_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/textWhite"/>

        <Button
            android:id="@+id/enter_btn"
            style="@style/more_set_pwd_btn"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/btn_ok"
            android:textColor="@color/bgWhite"
            android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>