<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
    android:background="@color/cl_guide_btn2"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:text="@string/time"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/spo2_with_unit"
            android:textColor="@color/cl_index_font"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/hr_with_unit"
            android:textColor="#f00"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <!--<TextView-->
            <!--android:text="RESP"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:gravity="center"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:id="@+id/textView"/>-->
    </LinearLayout>

    <View
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <ListView
        android:id="@+id/param_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>