<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_guide_btn2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/spo2_title"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@drawable/background_blue"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="20dp"
                android:text="@string/spo2"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="20dp"
                android:text="@string/percent_unit"
                android:textColor="@color/white" />
        </FrameLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:padding="10dp"
            android:id="@+id/spo2_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/pr_title"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@drawable/background_red"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="20dp"
                android:text="@string/pr"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="20dp"
                android:text="@string/bpm"
                android:textColor="@color/white" />
        </FrameLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:padding="10dp"
            android:id="@+id/pr_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>