<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:id="@+id/login_bg">

    <RelativeLayout
        android:id="@+id/loadpage_logo"
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:gravity="center">

        <TextView
            android:id="@+id/setting_image_tv"
            android:layout_width="160dp"
            android:layout_height="144dp"
            android:background="@drawable/login_logo"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/setting_image_tv"
            android:gravity="center">
            <!--<TextView-->
                <!--android:id="@+id/loadpagepre_name"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:text="@string/app_name"-->
                <!--android:lines="1"-->
                <!--android:paddingBottom="10dp"-->
                <!--android:shadowColor="#ff335824"-->
                <!--android:shadowRadius="1"-->
                <!--android:shadowDx="1"-->
                <!--android:shadowDy="1"-->
                <!--android:textColor="@color/textWhite" />-->
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_operate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                style="@style/UserLinearLayoutStyle"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/login_email" />

                <com.jks.Spo2MonitorEx.app.Activity.myView.EmailAutoCompleteTextView
                    android:id="@+id/et_user_login_username"
                    style="@style/userClearEditTextStyle"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/textWhite"
                    android:hint="@string/user_login_account_hint"
                    android:textColorHint="@color/textGrayC3" />
            </LinearLayout>
            <TextView
                style="@style/horizon_line"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="23dp"
                android:background="@color/line_white"/>

            <LinearLayout
                style="@style/UserLinearLayoutStyle"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/login_lock" />

                <com.jks.Spo2MonitorEx.app.Activity.myView.ClearEditText
                    android:id="@+id/et_user_login_password"
                    style="@style/userClearEditTextStyle"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/user_login_password_hint"
                    android:textColor="@color/textWhite"
                    android:inputType="textPassword"
                    android:textColorHint="@color/textGrayC3" />
            </LinearLayout>

            <TextView
                style="@style/horizon_line"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="23dp"
                android:background="@color/line_white"/>
        </LinearLayout>

        <LinearLayout
            style="@style/UserLinearLayoutStyle"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_user_login_sure"
                style="@style/userButtonNextStyle"
                android:textColor="@color/textWhite"
                android:text="@string/user_login_btn_login" />
        </LinearLayout>

        <TextView
            style="@style/horizon_line"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"
            android:background="#00000000"/>

        <LinearLayout
            style="@style/UserLinearLayoutStyle"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_user_Register_sure"
                style="@style/userButtonNextStyle"
                android:background="@drawable/user_login_button_bg_shape_blue"
                android:text="@string/user_login_btn_register" />
        </LinearLayout>

        <TextView
            style="@style/horizon_line"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"
            android:background="#00000000"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical" >

            <TextView
                android:id="@+id/user_login_find_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login_tv_tx1"
                android:textColor="@drawable/user_login_find_pwd_tv_sl" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>