<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/backgroundDark">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/action_bar">

        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"/>


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="10dp"
            android:background="#00ffffff"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/back_button"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@mipmap/ic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/app_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_display"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="广东宝莱特医用科技股份有限公司"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Copyright @ Guangdong Biolight Meditech Co., Ltd."
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Rights Reserved."
            android:textColor="@color/white"
            android:paddingBottom="20dp"/>
    </LinearLayout>
</FrameLayout>