<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/time_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/time_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="org.wangchenlong.datescroller.TimeActivity">

            <TextView
                android:id="@+id/btn_year_month_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/start_date"
                android:textColor="@android:color/black"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/please_choose_the_date"
                android:textColor="#A9A9A9"
                android:textSize="17dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/btn_year_month_day"
                android:layout_marginTop="16dp"
                android:background="#303F9F" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/time_main1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="org.wangchenlong.datescroller.TimeActivity">

            <TextView
                android:id="@+id/btn_year_month_day1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/end_date"
                android:textColor="@android:color/black"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/time_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/please_choose_the_date"
                android:textColor="#A9A9A9"
                android:textSize="17dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/btn_year_month_day1"
                android:layout_marginTop="16dp"
                android:background="#303F9F" />

        </RelativeLayout>


    </LinearLayout>
</LinearLayout>